--- a/components/home-page/hero.css
+++ b/components/home-page/hero.css
@@ -1,9 +1,17 @@
 .main-home{
     display: flex;
+    justify-content: center;
+    height: 100vh;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: rgb(85, 84, 84);
+}
+.main-home .main{
+    order: 2;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(85, 84, 84);
 }
 .main-home .img{
     background-color: lightgrey;
@@ -24,4 +32,29 @@ p{
     width: 40%;
     text-align: center;
     margin: 10px auto;
+}
+.list-icon{
+    order:1;
+}
+@media screen and (max-width:860px){
+    .main-home{
+        flex-direction: column;
+    }
+    .list-icon {
+        order: 2;
+    }
+    .list-icon .connect{
+        height: 100px;
+        width: 100%;
+    }
+    .list-icon .connect ul{
+   flex-direction: row;
+    }
+    .main{
+        order:1;
+        width: 100%;
+    }
+    p{
+        width: 100%;
+    }
 }
