--- a/components/layout/navbar.css
+++ b/components/layout/navbar.css
@@ -5,7 +5,7 @@ header{
     margin: 0;
     padding:10px 20px;
     color: white;
-    background-color: rgb(63, 62, 62);
+    background-color: black;
 }
 header h1{
     text-transform: uppercase;
